test/compile-errors/extern-warnings.crow
main nat64^(_ string[])
	()

f void() bare, c extern

f void() unsafe, c extern
